--- a/GameData/HotBeverage/HotBeverageInc/readme.htm
+++ b/GameData/HotBeverage/HotBeverageInc/readme.htm
@@ -317,8 +317,13 @@ title="Attribution">Attribution</a> for more comprehensive list</li>
 href="https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/"
 title="zer0Kerbal"><code>zer0Kerbal</code></a></h4>
 <blockquote>
-<p>Forum: [Thread][MOD:0:thread] - Download: [CurseForge][MOD:0:dnload]
-- Source: [GitHub][MOD:0:source]<br />
+<p>Forum: <a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/208353-*/"
+title="Hot Beverage Inc Forum Thread">Thread</a> - Download: <a
+href="https://www.curseforge.com/kerbal/ksp-mods/HotBeverageInc"
+title="Curseforge">CurseForge</a> - Source: <a
+href="https://github.com/zer0Kerbal/HotBeverageInc/"
+title="GitHub">GitHub</a><br />
 License: <a href="https://creativecommons.org/licenses/by-nd/4.0/"
 title="CC BY-ND 4.0"><img
 src="https://img.shields.io/endpoint?url=https://raw.githubusercontent.com/zer0Kerbal/HotBeverageInc/master/json/license.json"
