--- a/GameData/HotBeverage/HotBeverageInc/readme.htm
+++ b/GameData/HotBeverage/HotBeverageInc/readme.htm
@@ -1,6 +1,9 @@
+<!-- readme.md v1.6.9.9
+Hot Beverage Inc (HBI)
+created: 17 Jul 2017
+updated: 04 Oct 2022 -->
 
-
-
+<!--this file: CC BY-ND 4.0 by zer0Kerbal-->
 
 <p><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/208353-*/"
@@ -104,9 +107,9 @@ Next to the head-turning, heart-burning and meeting-adjourning <a
 href="https://github.com/zer0Kerbal/Kerturn"
 title="Kerturn (KAT)">Kerturn</a>, you'll also get our "three size fits
 almost everyone (except your mom)" <a
-href="https://github.com/zer0Kerbal/HBSensorModules"
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/211260-*/"
 title="Sensor Modules (SENS)"><strong>sensor</strong></a> and <a
-href="https://github.com/zer0Kerbal/HBServiceModules"
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/211246-*/"
 title="Service Modules (SERV)"><strong>fuel cell
 modules</strong></a>!</p>
 <p>That's right! Sensor and fuel cell modules with a 1.25 or a 2.5 or a
@@ -208,18 +211,19 @@ title="Hot Beverage Inc (HBI)">Hot Beverage Inc (HBI)</a>
 <li><a href="https://github.com/zer0Kerbal/IrradiatedParts"
 title="Irradiated Parts (HBEx)">Irradiated Parts (HBEx)</a>
 <em>experimental parts</em></li>
-<li><a href="https://github.com/zer0Kerbal/HBFuelCells"
-title="HBFuelCells (FUEL)">HBFuelCells (FUEL)</a> <em>Fuel
-Cells</em></li>
+<li><a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/211277-*/"
+title="Fuel Cells (FUEL)">FuelCells (FUEL)</a></li>
 <li><a href="https://github.com/zer0Kerbal/HBRTG"
 title="Radioisotope Thermoelectric Generators (RTG)">Radioisotope
-Thermoelectric Generators (RTG)</a> <em>Radioisotope Thermoelectric
-Generators</em></li>
+Thermoelectric Generators (RTG)</a></li>
 <li><a href="https://github.com/zer0Kerbal/Kerturn"
 title="Kerturn (KAT)">Kerturn (KAT)</a></li>
-<li><a href="https://github.com/zer0Kerbal/HBSensorModules"
+<li><a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/211260-*/"
 title="Sensor Modules (SENS)">Sensor Modules (SENS)</a></li>
-<li><a href="https://github.com/zer0Kerbal/HBServiceModules"
+<li><a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/211246-*/"
 title="Service Modules (SERV)">Service Modules (SERV)</a></li>
 </ul></li>
 <li><a
@@ -265,29 +269,28 @@ title="TweakScale">TweakScale</a></li>
 <ul>
 <li><a href="https://github.com/zer0Kerbal/IrradiatedParts"
 title="Irradiated Parts (HBEx)">Irradiated Parts (HBEx)</a></li>
-<li><a href="https://github.com/zer0Kerbal/HBFuelCells"
-title="HBFuelCells (FUEL)">HBFuelCells (FUEL)</a> Stack Fuel Cells</li>
+<li><a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/211277-*/"
+title="Fuel Cells (FUEL)">FuelCells (FUEL)</a></li>
 <li><a href="https://github.com/zer0Kerbal/HBRTG"
 title="Radioisotope Thermoelectric Generators (RTG)">Radioisotope
-Thermoelectric Generators (RTG)</a> Radioisotope Thermoelectric
-Generators</li>
+Thermoelectric Generators (RTG)</a></li>
 <li><a href="https://github.com/zer0Kerbal/Kerturn"
 title="Kerturn (KAT)">Kerturn (KAT)</a></li>
-<li><a href="https://github.com/zer0Kerbal/HBSensorModules"
+<li><a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/211260-*/"
 title="Sensor Modules (SENS)">Sensor Modules (SENS)</a></li>
-<li><a href="https://github.com/zer0Kerbal/HBServiceModules"
+<li><a
+href="https://forum.kerbalspaceprogram.com/index.php?/topic/211246-*/"
 title="Service Modules (SERV)">Service Modules (SERV)</a></li>
-<li>Either
+<li>Either <a href="#fn3" class="footnote-ref" id="fnref3"
+role="doc-noteref"><sup>3</sup></a>
 <ul>
 <li><a href="https://github.com/net-lisias-ksp/ModuleManager"
-title="Module Manager /L">Module Manager /L</a> <a href="#fn3"
-class="footnote-ref" id="fnref3"
-role="doc-noteref"><sup>3</sup></a></li>
+title="Module Manager /L">Module Manager /L</a></li>
 <li><a
 href="https://forum.kerbalspaceprogram.com/index.php?/topic/50533-*/"
-title="Module Manager">Module Manager</a> <a href="#fn4"
-class="footnote-ref" id="fnref4"
-role="doc-noteref"><sup>4</sup></a></li>
+title="Module Manager">Module Manager</a></li>
 </ul></li>
 </ul>
 <h3 id="tags">Tags</h3>
@@ -370,19 +373,19 @@ href="https://buymeacoffee.com/zer0Kerbal/" title="Buy Me A Snack"><img
 src="https://img.shields.io/badge/Buy%20Me%20a%20-Snack!-FFDD00?style=for-the-badge&amp;logo=buymeacoffee/"
 title="Buy Me A Snack" alt="Buy zer0Kerbal a snack" /></a></p>
 <p><em>and it is true.</em></p>
+<!-- mod links -->
 
+<!--- CKAN -->
 
+<!--- release links -->
 
+<!-- Kerbal Space Program -->
 
+<!-- links to add-ons/mods -->  
 
+<!-- financial support -->
 
-
-
-  
-
-
-
-
+<!-- Localization -->
 
 <hr />
 <h4 id="connect-with-me">Connect with me</h4>
@@ -419,7 +422,7 @@ now.</li>
 <li>CurseForge. Right now.</li>
 <li>SpaceDock (and CKAN users). Soon™</li>
 </ol>
-
+<!-- footnotes -->
 
 <section id="footnotes" class="footnotes footnotes-end-of-document"
 role="doc-endnotes">
@@ -432,9 +435,6 @@ class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 role="doc-backlink">↩︎</a></p></li>
 <li id="fn3"><p><em>Be Kind: Lithobrake, not jakebrake! Keep your Module
 Manager up to date!</em><a href="#fnref3" class="footnote-back"
-role="doc-backlink">↩︎</a></p></li>
-<li id="fn4"><p><em>Be Kind: Lithobrake, not jakebrake! Keep your Module
-Manager up to date!</em><a href="#fnref4" class="footnote-back"
 role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
